@@ -60,6 +60,7 @@ Support for adding custom validation logic to StreamField blocks has been formal
  * Fix radio and checkbox elements shrinking when using a long label (Sage Abdullah)
  * Fix select elements expanding beyond their container when using a long option label (Sage Abdullah)
  * Fix timezone handling of `TemplateResponse`s for users with a custom timezone (Stefan Hammer, Sage Abdullah)
+ * Ensure TableBlock initialisation correctly runs after load and its width is aligned with the parent panel (Dan Braghis)
 
 ### Documentation
 
